--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -202,7 +202,27 @@
                 </tr>
               </table>
 
-              <div class="mt-4 mb-4 text-uppercase">
+              <table class='spotbie-controls-search-results' *ngIf="searchCategorySorter == 'shopping'">
+                <tr>
+                  <td (click)="sortBy(0)" title="Sort By Distance">
+                    <img src='assets/images/map/distance.svg' />
+                  </td>
+
+                  <td (click)="sortBy(1)" title="Sort By Rating">
+                    <img src='assets/images/map/ratings.svg' />
+                  </td>
+
+                  <td (click)="sortBy(2)" title="Sort By Reviews">
+                    <img src='assets/images/map/reviews.svg' />
+                  </td>
+
+                  <td (click)="sortBy(3)" [ngStyle]="{ 'border-right' : 'unset' }"  title="Sory By Pricing">
+                    <img src='assets/images/map/pricing.svg' />
+                  </td>
+                </tr>
+              </table>
+
+              <div class="mt-4 mb-4 text-uppercase" (click)="changeSorting()">
                 Sorted by {{ sort_by_txt }}
                 <span *ngIf="sortAc != 4 && sortAc != 5 && sortAc != 6 && sortAc != 7 && sortAc != 8">
                   <i [ngClass]="sortingOrderClass(sorting_order)"></i>
@@ -229,26 +249,6 @@
                 <td *ngIf="showOpened == false">
                   OPEN/CLOSED
                 </td>
-              </table>
-
-              <table class='spotbie-controls-search-results' *ngIf="searchCategorySorter == 'shopping'">
-                <tr>
-                  <td (click)="sortBy(0)" title="Sort By Distance">
-                    <img src='assets/images/map/distance.svg' />
-                  </td>
-
-                  <td (click)="sortBy(1)" title="Sort By Rating">
-                    <img src='assets/images/map/ratings.svg' />
-                  </td>
-
-                  <td (click)="sortBy(2)" title="Sort By Reviews">
-                    <img src='assets/images/map/reviews.svg' />
-                  </td>
-
-                  <td (click)="sortBy(3)" [ngStyle]="{ 'border-right' : 'unset' }"  title="Sory By Pricing">
-                    <img src='assets/images/map/pricing.svg' />
-                  </td>
-                </tr>
               </table>
 
               <table  class='spotbie-controls-search-results'
@@ -381,6 +381,8 @@
                 <div class='spotbie-search-result-phone' *ngIf="search_result.phone != ''">
                   {{ search_result.display_phone }}
                 </div>
+
+                <div class='spotbie-search-result-transactions' *ngIf="search_result.transactions_on == '1'">{{ search_result.friendly_transactions }}</div>
               </td>
 
               <td *ngIf="type_of_info_object == 'ticketmaster_events'">
@@ -407,11 +409,11 @@
                 <div class='spotbie-event-code' *ngIf="search_result.dates.status.code">
                   Status: {{ search_result.dates.status.code }}
                 </div>
+
+                <div class='spotbie-search-result-transactions' *ngIf="search_result.transactions_on == '1'">{{ search_result.friendly_transactions }}</div>
               </td>
             </tr>
           </table>
-
-          <div class='spotbie-search-result-transactions' *ngIf="search_result.transactions_on == '1'">{{ search_result.friendly_transactions }}</div>
         </div>
 
         <!--Page Number Wrapper -->
