--- a/src/app/spotbie/menu.component.css
+++ b/src/app/spotbie/menu.component.css
@@ -47,7 +47,7 @@
     vertical-align: middle;
 }
 .spotbie-header-mini-logo{
-    position: relative;  
+    position: relative;
     float: left;
     height: 30px;
     min-height: 30px;
@@ -63,9 +63,6 @@
     font-size: 27px;
     vertical-align: middle;
 }
-.sb-businessMenu:hover{
-    font-size: 29px; 
-}
 span.sb-loyalty-points{
     font-size: 1rem !important;
     color: #fff !important;
@@ -80,11 +77,6 @@ img.sb-qr{
     min-width: 25px;
     max-width: 25px;
     cursor: pointer;
-}  
-img.sb-qr:hover{
-    width: 28px;
-    min-width: 28px;
-    max-width: 28px;    
 }
 .spotbie-menu-logged{
     position: relative;
@@ -104,7 +96,7 @@ img.sb-qr:hover{
     vertical-align: middle;
     min-width: 125px;
     width: 125px;
-    max-width: 125px;    
+    max-width: 125px;
 }
 .spotbie-our-blog-link{
     position: relative;
@@ -160,7 +152,7 @@ img.sb-qr:hover{
     margin-top: 40px;
     width: 75%;
     min-width: 75%;
-    max-width: 75%;   
+    max-width: 75%;
 }
 .spotbie-app-icon-wrapper{
     position: relative;
@@ -252,14 +244,14 @@ img.sb-qr:hover{
 .spotbie-slider-menu-background{
     position: fixed;
     top: 0px;
-    bottom: 0px;    
+    bottom: 0px;
     z-index: 97;
     min-height: 100vh;
     min-width: 100%;
     width: 100%;
     background-color: #000000c2;
 }
-.spotbie-slider-menu td{   
+.spotbie-slider-menu td{
     vertical-align: middle;
     padding-left: 10px;
     padding-right: 10px;
@@ -267,8 +259,8 @@ img.sb-qr:hover{
 .spotbie-slider-menu td div{
     padding-left: 10px;
     padding-top: 10px;
-    padding-bottom: 10px; 
-    border-bottom: 1px solid #32303e;      
+    padding-bottom: 10px;
+    border-bottom: 1px solid #32303e;
 }
 .spotbie-slider-menu td div:hover{
     cursor: pointer;
@@ -309,7 +301,7 @@ img.sb-qr:hover{
     border-spacing: 0px;
     table-layout: fixed;
     background: linear-gradient(45deg,#64e56f, #35a99f );
-    opacity: 0.65;
+    opacity: 0.85;
 }
 .sb-inputWithIconWrapper .fa.fa-user,
 .sb-inputWithIconWrapper .fa.fa-envelope,
@@ -352,9 +344,9 @@ img.sb-qr:hover{
     justify-content: center;
     flex-wrap: nowrap;
     flex-direction: column;
-    align-items: center; 
-    padding-bottom: unset !important; 
-    overflow-y: hidden;        
+    align-items: center;
+    padding-bottom: unset !important;
+    overflow-y: hidden;
 }
 .sb-login-top-padding{
     padding-top: 120px;
@@ -384,7 +376,7 @@ img.sb-qr:hover{
 .sb-closeButton{
     z-index: 99;
     top: 2%;
-    right: 3%;    
+    right: 3%;
 }
 .sb-scroll{
     overflow-y: scroll;
@@ -412,53 +404,53 @@ img.sb-qr:hover{
     background: transparent
 }
 /**WIDTH MEDIA QUERIES */
-@media (max-width: 1600px) { 
+@media (max-width: 1600px) {
     .sb-userName,
     .spotbie-menu-fixed span{
         font-size: .6rem;
     }
 }
-@media (max-width: 1200px) {   
+@media (max-width: 1200px) {
     .spotbie-menu-fixed,
     .spotbie-menu-fixed{
         width: 100%;
         min-width: 100%;
         max-width: 100%;
-    }    
-}
-@media (max-width: 1024px) { 
-    .spotbie-header-mini-logo{
-        float: right;
     }
 }
-@media (max-width: 900px) { 
+@media (max-width: 1024px) {
+  .spotbie-header-mini-logo{
+      float: right;
+  }
+}
+@media (max-width: 900px) {
 
 }
-@media (max-width: 768px) { 
+@media (max-width: 768px) {
     .spotbie-menu-logged{
         margin-top: env(safe-area-inset-top, 20px);
     }
     .spotbie-menu-fixed{
-        padding-top: env(safe-area-inset-top, 20px);   
-    }    
+        padding-top: env(safe-area-inset-top, 20px);
+    }
     .sb-scroll{
         overflow-y: scroll;
     }
     .sb-desktopNavBar{
         display: none;
-    }      
+    }
 }
-@media (max-width: 650px) { 
+@media (max-width: 650px) {
     .sb-menu-nav{
         padding-left: 0px;
         padding-right: 0px;
         text-align: left;
-    }   
+    }
     .sb-login-top-padding{
         padding-top: 40px;
     }
 }
-@media (max-width: 600px) { 
+@media (max-width: 600px) {
     .spotbie-slider-menu{
         width: 300px;
         max-width: 300px;
@@ -466,23 +458,27 @@ img.sb-qr:hover{
     }
     .sb-inputWithIconWrapper{
         min-width: 100%;
-    } 
-    span.sb-loyalty-points{
-        padding-right: 5px !important;
-        margin-left: 10px;
-        border-left: unset;
     }
+    span.sb-loyalty-points {
+      padding-right: 5px !important;
+      margin-left: 10px;
+      border-left: unset;
+    }
+    img.sb-loyalty-points{
+        margin-left: 10px;
+    }
+
     img.sb-qr{
-        margin-left: 15px;
-    }           
+      margin-left: 15px;
+    }
 }
-@media (max-width: 560px) {   
+@media (max-width: 560px) {
     .spotbie-menu-logged td{
         min-width: 105px;
         width: 105px;
-        max-width: 105px; 
+        max-width: 105px;
         padding-top: 10px;
-        padding-bottom: 10px;       
+        padding-bottom: 10px;
     }
     .spotbie-top-menu-logged-out td {
         border-radius: 5px;
@@ -499,7 +495,7 @@ img.sb-qr:hover{
     }
     .spotbie-menu-logged i{
         font-size: 28px;
-    }   
+    }
     .spotbie-color-picker {
         width: 35px;
         min-width: 35px;
@@ -510,25 +506,25 @@ img.sb-qr:hover{
     }
     #spotbieBackgroundColor{
         padding-top: 15px;
-    }   
+    }
     .spotbie-overlay-window{
         padding-top: 30px;
         padding-bottom: 0px;
     }
-    .spotbie-slider-menu td{   
+    .spotbie-slider-menu td{
         font-size: 18px;
     }
 }
-@media (max-width: 460px) { 
+@media (max-width: 460px) {
     .spotbie-apps-wrapper{
         width: 98%;
         min-width: 98%;
-        max-width: 98%;        
-    }      
+        max-width: 98%;
+    }
     .spotbie-app-icon-wrapper{
         width: 25%;
         min-width: 25%;
-        max-width: 25%;      
+        max-width: 25%;
     }
     .spotbie-app-icon-image{
         width: 30px;
@@ -536,7 +532,7 @@ img.sb-qr:hover{
         max-width: 30px;
         min-height: 30px;
         height: 30px;
-        max-height: 30px;        
+        max-height: 30px;
     }
     .spotbie-menu{
         max-width: 100%;
@@ -546,15 +542,20 @@ img.sb-qr:hover{
     .spotbie-menu td{
         padding-top: 18px;
         padding-bottom: 16px;
-        border-radius: 6px;  
+        border-radius: 6px;
     }
     .spotbie-slider-menu{
         width: 300px;
         max-width: 300px;
         min-width: 300px;
     }
+    img.sb-qr {
+      width: 20px;
+      min-width: 20px;
+      max-width: 20px;
+    }
 }
-@media (max-width: 420px) { 
+@media (max-width: 420px) {
     .spotbie-color-picker {
         width: 30px;
         min-width: 30px;
@@ -562,13 +563,13 @@ img.sb-qr:hover{
         height: 30px;
         min-height: 30px;
         max-height: 30px;
-    }     
+    }
     .spotbie-menu-logged td{
         padding-top: 11px;
         padding-bottom: 12px;
         min-width: 80px;
         width: 80px;
-        max-width: 80px;        
+        max-width: 80px;
     }
     .spotbie-menu-logged img{
         width: 30px;
@@ -576,24 +577,24 @@ img.sb-qr:hover{
         max-width: 30px;
         height: 30px;
         min-height: 30px;
-        max-height: 30px;        
-    } 
+        max-height: 30px;
+    }
     .spotbie-login-terms{
         font-size: 11px !important;
-    }        
+    }
     .spotbie-text-link{
         font-size: 11px !important;
-    } 
+    }
     .spotbie-button {
         max-width: 90%;
         width: 90%;
         min-width: 90%;
-    }                          
+    }
 }
-@media (max-width: 360px) { 
+@media (max-width: 360px) {
     .spotbie-button {
         font-size: 13px;
-    }    
+    }
     .spotbie-color-picker {
         width: 30px;
         min-width: 30px;
@@ -601,7 +602,7 @@ img.sb-qr:hover{
         height: 30px;
         min-height: 30px;
         max-height: 30px;
-    }   
+    }
     .spotbie-menu{
         font-size: 15px;
     }
@@ -611,46 +612,46 @@ img.sb-qr:hover{
         min-width: 65px;
         width: 65px;
         max-width: 65px;
-    }    
+    }
     .spotbie-menu-logged img{
         width: 25px;
         min-width: 25px;
         max-width: 25px;
         height: 25px;
         min-height: 25px;
-        max-height: 25px;        
-    } 
+        max-height: 25px;
+    }
     .spotbie-slider-menu{
         width: 250px;
         max-width: 250px;
         min-width: 250px;
-    }  
+    }
     .spotbie-slider-menu td div{
         padding-top: 10px;
-        padding-bottom: 10px;         
-    }  
+        padding-bottom: 10px;
+    }
     .spotbie-text-link{
         font-size: 11px;
-    }    
+    }
     .sb-inputWithIconWrapper .sb-input{
         font-size: 16px;
         padding-top: 12px;
         padding-bottom: 12px;
-    }   
+    }
     .sb-iconInInputWrapper{
         padding: 10px;
-    }    
+    }
     .spotbie-login-terms{
         font-size: 11px !important;
-    }        
+    }
 }
 
 @media (max-width: 320px) {
 
 }
-@media (max-width: 220px) { 
+@media (max-width: 220px) {
 
 }
-@media (max-width: 120px) { 
+@media (max-width: 120px) {
 
 }
