--- a/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-creator/ad-creator.component.html
+++ b/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-creator/ad-creator.component.html
@@ -2,6 +2,10 @@
 
 <div class="spotbie-overlay-window">
 
+    <div class='sb-closeButton' (click)="closeThis()">
+      <i class="fa fa-times"></i>
+    </div>
+
     <div #spbTopAnchor></div>
 
     <div class='sb-adCreatorWrapper'>
