--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -10,43 +10,40 @@
     <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;">GROW YOUR BUSINESS</h1>
     <br/>
 
-    <h2 class="text-uppercase"><span class='spotbie-text-gradient'>Award Loyalty Points to </span>
-        <span class="sb-text-light-green-gradient text-uppercase" [routerLink]="['/home']"><b>SpotBie Community Members</b></span>
+    <h2><span class='spotbie-text-gradient'>Award Loyalty Points to </span>
+        <span class="sb-text-light-green-gradient" [routerLink]="['/home']"><b>SpotBie Community Members</b></span>
         <br/><br/>
-        <span class="spotbie-text-gradient"><b>Food, Shopping, Events</b></span>
     </h2>
 
-    <p class="text-center text-uppercase">
+    <div class="sb-homePageIconsTable mt-4 mb-4">
+      <div (click)="spawnCategories('food')">
+        <img src="assets/images/home_imgs/find-places-to-eat.svg" /><br/>
+        <span class='spotbie-text-gradient'>FOOD</span>
+      </div>
+
+      <div (click)="spawnCategories('events')">
+        <img src="assets/images/home_imgs/find-events.svg" /><br/>
+        <span class='spotbie-text-gradient'>EVENTS</span>
+      </div>
+
+      <div (click)="spawnCategories('shopping')">
+        <img src="assets/images/home_imgs/find-places-for-shopping.svg" /><br/>
+        <span class='spotbie-text-gradient'>RETAIL</span>
+      </div>
+    </div>
+
+    <p class="text-center spotbie-text-gradient">
         <br/>
         Offer exclusive discounts, drinks & food, merchandise, and more.
         <br/><br/>
     </p>
 
-    <div class="sb-homePageIconsTable mt-4 mb-4">
-        <div (click)="spawnCategories('food')">
-            <img src="assets/images/home_imgs/find-places-to-eat.svg" /><br/>
-            <span class='spotbie-text-gradient'>FOOD</span>
-        </div>
-
-        <div (click)="spawnCategories('events')">
-            <img src="assets/images/home_imgs/find-events.svg" /><br/>
-            <span class='spotbie-text-gradient'>EVENTS</span>
-        </div>
-
-        <div (click)="spawnCategories('shopping')">
-            <img src="assets/images/home_imgs/find-places-for-shopping.svg" /><br/>
-            <span class='spotbie-text-gradient'>RETAIL</span>
-        </div>
-    </div>
-
     <div class="spotbie-button sb-getStarted mt-5 mb-5" (click)="calendly()">
         SCHEDULE DEMO
     </div>
-
 </section>
 
 <section id="attractNewCustomers" #attractNewCustomers>
-
     <div class="mb-4 sb-readImage" id="sbReadImageRestaurants"></div>
 
     <img class='sb-greenIcon' src='assets/images/home_imgs/spotbie-green-icon.svg' />
@@ -155,7 +152,7 @@
 
     <img class="mt-3 mb-3" src="assets/images/logo_spotbie_green.svg" />
 
-    <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2022</p>
+    <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2023</p>
 
     <div class="mt-4">
         <i class="fab fa-instagram" (click)="openIg()"></i>
