--- a/src/app/features/user-features/user-features.component.css
+++ b/src/app/features/user-features/user-features.component.css
@@ -1,8 +1,6 @@
 .sb-top-headerImg{
-    background: url(../../../assets/images/home_imgs/spotbie-miami.jpg) !important;
-    background-position: center !important;
-    background-size: cover !important;
-    background-repeat: no-repeat !important;    
+  background-size: cover !important;
+  background: url('../../../assets/images/home_imgs/spotbie-miami.jpg') no-repeat center !important;
 }
 .fa-glass-cheers,
 .fa-hamburger,
