--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -10,9 +10,8 @@
     <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;">GROW YOUR BUSINESS</h1>
     <br/>
 
-    <h2><span class='spotbie-text-gradient'>Award Loyalty Points to </span>
-        <span class="sb-text-light-green-gradient" [routerLink]="['/home']"><b>SpotBie Community Members</b></span>
-        <br/><br/>
+    <h2>
+        <span class='spotbie-text-gradient'>Award Loyalty Points</span>
     </h2>
 
     <div class="sb-homePageIconsTable mt-4 mb-4">
@@ -35,11 +34,38 @@
     <p class="text-center spotbie-text-gradient">
         <br/>
         Offer exclusive discounts, drinks & food, merchandise, and more.
-        <br/><br/>
+        <br/>
     </p>
 
-    <div class="spotbie-button sb-getStarted mt-5 mb-5" (click)="calendly()">
-        SCHEDULE DEMO
+    <ng-container *ngIf="!isMobile"> 
+        <div class="d-flex align-middle justify-content-center">
+            <button class="spotbie-button sb-getStarted sbBetaBtn mt-4 mb-5" (click)="calendly()">
+                SCHEDULE DEMO
+            </button>
+     
+            <button class="spotbie-button sb-getStarted sbBetaBtn mt-4 mb-5" (click)="signUp()">
+                JOIN THE BETA
+            </button>
+        </div>
+    </ng-container>
+
+    <ng-container *ngIf="isMobile"> 
+        <div>
+            <button class="spotbie-button sb-getStarted mt-5 mb-4" (click)="calendly()">
+                SCHEDULE DEMO
+            </button>
+            <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="signUp()">
+                JOIN THE BETA
+            </button>
+        </div>
+    </ng-container>
+
+
+    <div class="spotbiePurchaseIncentives d-flex align-content-center justify-content-center align-middle text-decoration-underline">
+      <div (click)="openPurchaseIncentives(3)">The Idea</div>
+      <div (click)="openPurchaseIncentives(2)">How Does it work?</div>
+      <div (click)="openPurchaseIncentives(1)">View Live Demo</div>
+      <div (click)="openPurchaseIncentives(0)">Pricing</div>
     </div>
 </section>
 
@@ -65,6 +91,7 @@
 
     <p class="sb-text-light-green-gradient text-center mt-2 mb-2">
         REWARDS, REWARD RATES, & DISCOUNTS
+        <br/><br/>
     </p>
 
     <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="signUp()">
