--- a/src/app/spotbie/map/map.component.css
+++ b/src/app/spotbie/map/map.component.css
@@ -867,16 +867,16 @@ button.gm-ui-hover-effect:focus-within{
 ::-webkit-scrollbar{
   height: 10px;
   width: 10px;
-  background: transparent;
+  background: #1e1e1e;
 }
 ::-webkit-scrollbar-thumb{
-  background: linear-gradient(90deg, transparent,transparent);
+  background: linear-gradient(90deg,#35a99f,#64e56f);
 }
 ::-webkit-scrollbar-corner{
-  background: linear-gradient(90deg,transparent,transparent);
+  background: linear-gradient(90deg,#35a99f,#64e56f);
 }
 ::-webkit-scrollbar-button{
-  background: linear-gradient(90deg,transparent,transparent);
+  background: linear-gradient(90deg,#35a99f,#64e56f);
 }
 /**WIDTH MEDIA QUERIES */
 @media (max-width: 1583px) {
