--- a/src/app/spotbie/menu.component.css
+++ b/src/app/spotbie/menu.component.css
@@ -1,17 +1,16 @@
 ::-webkit-scrollbar{
-    height: 10px;
-    width: 10px;
-    background: transparent;
+  height: 10px;
+  width: 10px;
+  background: transparent;
 }
 ::-webkit-scrollbar-thumb{
-    background: transparent;
+  background: linear-gradient(90deg,transparent,transparent);
 }
-
 ::-webkit-scrollbar-corner{
-    background: transparent;
+  background: linear-gradient(90deg,transparent,transparent);
 }
 ::-webkit-scrollbar-button{
-    background-color: transparent;
+  background: linear-gradient(90deg,transparent,transparent);
 }
 .spotbie-top-menu-logged-out{
     position: relative;
