--- a/src/styles.css
+++ b/src/styles.css
@@ -157,16 +157,16 @@ div:active, div:focus{
 ::-webkit-scrollbar{
     height: 10px;
     width: 10px;
-    background: #1c1924;
+    background: transparent;
 }
 ::-webkit-scrollbar-thumb{
-    background: linear-gradient(90deg,#35a99f,#64e56f);
+    background: linear-gradient(90deg,transparent,transparent);
 }
 ::-webkit-scrollbar-corner{
-    background: linear-gradient(90deg,#35a99f,#64e56f);
+    background: linear-gradient(90deg,transparent,transparent);
 }
 ::-webkit-scrollbar-button{
-    background: linear-gradient(90deg,#35a99f,#64e56f);
+    background: linear-gradient(90deg,transparent,transparent);
 }
 
 a, a:hover, a:active, a:after{
